Feature: 현재 활동 부원 목록 조회 및 역할 설정 API 구현 (#19)
* feat: 현재 활동 중인 부원 목록 조회 API

* refactor: dto 위치 변경

* feat: 현재 활동 중인 부원 역할 설정 API

* fix: 현재 활동 부원 목록 조회 에러 수정

* refactor: 클래스 이름 변경

* fix: 현재 활동 부원 목록 반환 에러 수정

* feat: OM 목록 조회 API

* style: 공백 제거

* feat: Old Member를 활동 기수로 바꾸는 API

* refactor: Old Member를 활동 기수로 바꾸는 DTO 분리

* refactor: 삼항 연산자 제거

* refactor: API 명세에 맞게 수정

* refactor: MemberRole enum type로 수정

* refactor: API 엔드포인트 수정

* style: 공백 삭제

* refactor: 메서드 분리 및 toList() 사용

* feat: 가입 승인 시, 포지션 선택 안하면 에러 출력

* refactor: 운영진 및 교육팀도 role 변경 가능하도록 수정

* refactor: dto 클래스 이름 변경

- ActiveMemberInfoResponse -> MemberEnrollInfoResponse

* refactor: dto 생성 시 정적 팩토리 메서드 패턴 이용

---------

Co-authored-by: Youth <boysoeng@naver.com>
Co-authored-by: Youth <109585620+Youthhing@users.noreply.github.com>