@@ -1,6 +1,11 @@
 package cotato.csquiz.service;
 
+import static cotato.csquiz.domain.entity.MemberRole.REFUSED;
+
 import cotato.csquiz.domain.dto.auth.MemberInfoResponse;
+import cotato.csquiz.domain.dto.member.MemberEnrollInfoResponse;
+import cotato.csquiz.domain.dto.member.UpdateActiveMemberRoleRequest;
+import cotato.csquiz.domain.dto.member.UpdateOldMemberRoleRequest;
 import cotato.csquiz.domain.dto.member.MemberApproveRequest;
 import cotato.csquiz.domain.dto.member.MemberRejectRequest;
 import cotato.csquiz.domain.entity.Generation;
@@ -10,6 +15,7 @@ import cotato.csquiz.exception.AppException;
 import cotato.csquiz.exception.ErrorCode;
 import cotato.csquiz.repository.GenerationRepository;
 import cotato.csquiz.repository.MemberRepository;
+import io.micrometer.common.util.StringUtils;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
@@ -33,7 +39,7 @@ public class AdminService {
                         .backFourNumber(member.getPhoneNumber().substring(member.getPhoneNumber().length() - 4))
                         .role(member.getRole())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
@@ -42,6 +48,7 @@ public class AdminService {
         Generation findGeneration = generationRepository.findById(memberApproveRequest.getGenerationId())
                 .orElseThrow(() -> new AppException(ErrorCode.GENERATION_NOT_FOUND));
         validateIsGeneral(member);
+        validatePosition(memberApproveDto.getPosition());
         if (member.getRole() == MemberRole.GENERAL) {
             member.updateRole(MemberRole.MEMBER);
             member.updateGeneration(findGeneration);
@@ -50,12 +57,18 @@ public class AdminService {
         }
     }
 
+    private void validatePosition(String position) {
+        if (StringUtils.isBlank(position)) {
+            throw new AppException(ErrorCode.INVALID_POSITION);
+        }
+    }
+
     @Transactional
     public void rejectApplicant(MemberRejectRequest memberRejectRequest) {
         Member member = findMember(memberRejectRequest.getUserId());
         validateIsGeneral(member);
         if (member.getRole() == MemberRole.GENERAL) {
-            member.updateRole(MemberRole.REFUSED);
+            member.updateRole(REFUSED);
             memberRepository.save(member);
         }
     }
@@ -68,6 +81,46 @@ public class AdminService {
     private void validateIsGeneral(Member member) {
         if (member.getRole() != MemberRole.GENERAL) {
             throw new AppException(ErrorCode.ROLE_IS_NOT_MATCH);
+        }
+    }
+
+    public List<MemberEnrollInfoResponse> getCurrentActiveMembers() {
+        List<Member> activeMembers = memberRepository.findAllByRole(MemberRole.MEMBER);
+        return activeMembers.stream()
+                .map(MemberEnrollInfoResponse::from)
+                .toList();
+    }
+
+    @Transactional
+    public void updateActiveMemberRole(UpdateActiveMemberRoleRequest updateActiveMemberRoleRequest) {
+        Member member = findMember(updateActiveMemberRoleRequest.getUserId());
+        if (member.getRole() == MemberRole.GENERAL || member.getRole() == MemberRole.REFUSED) {
+            throw new AppException(ErrorCode.ROLE_IS_NOT_MATCH);
+        }
+        member.updateRole(updateActiveMemberRoleRequest.getRole());
+        memberRepository.save(member);
+    }
+
+    public List<MemberEnrollInfoResponse> getOldMembersList() {
+        List<Member> oldMembers = memberRepository.findAllByRole(MemberRole.OLD_MEMBER);
+        return oldMembers.stream()
+                .map(MemberEnrollInfoResponse::from)
+                .toList();
+    }
+
+    @Transactional
+    public void updateOldMemberToActiveGeneration(UpdateOldMemberRoleRequest updateOldMemberRoleRequest) {
+        Member member = findMember(updateOldMemberRoleRequest.getUserId());
+        validateIsOldMember(member);
+        if (member.getRole() == MemberRole.OLD_MEMBER) {
+            member.updateRole(MemberRole.MEMBER);
+            memberRepository.save(member);
+        }
+    }
+
+    private void validateIsOldMember(Member member) {
+        if (member.getRole() != MemberRole.OLD_MEMBER) {
+            throw new AppException(ErrorCode.ROLE_IS_NOT_OLD_MEMBER);
         }
     }
 }
